--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
   <properties>
     <java.version>17</java.version>
     <springfox-version>2.9.2</springfox-version>
+    <jjwt.version>0.11.2</jjwt.version>
+    <java-jwt.version>3.18.2</java-jwt.version>
   </properties>
   <dependencies>
     <dependency>
@@ -30,6 +32,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>${java-jwt.version}</version>
     </dependency>
 
     <dependency>
