support for rounds

--- a/doc/api.spec.yaml
+++ b/doc/api.spec.yaml
@@ -205,6 +205,9 @@ components:
       allOf:
         - $ref: "#/components/schemas/CommonResponse"
         - $ref: "#/components/schemas/MatchRequest"
+      properties:
+        round:
+          type: integer
 
 
   examples:
