Show names instead of ids in Match and GroupPlayer

--- a/doc/api.spec.yaml
+++ b/doc/api.spec.yaml
@@ -171,6 +171,10 @@ components:
         playerId:
           type: integer
           format: int64
+        playerName:
+          type: string
+        playerRating:
+          type: integer
         startingPosition:
           type: integer
         score:
